# infrastructure-voter-gateway

./: README.md  gateway.py  pipservice-voter-gateway.service  pyproject.toml
